name:               
version:            0.0.0
synopsis:           
description:        
category:           
license:            MIT
author:             Ben Foppa
homepage:           https://github.com/RobotGymnast/
maintainer:         benjamin.foppa@gmail.com
build-type:         Simple
cabal-version:      >= 1.9.2


    hs-source-dirs:   src/
    ghc-options:      -Wall -Werror -threaded -rtsopts=all

    build-depends: base == 4.*

source-repository head
  type: git
  location: https://github.com/RobotGymnast/.git
